# signalbench

./: Cargo.toml  LICENSE  README.md  replit.md
.circleci/: config.yml
.github/workflows/: build-binary.yml  ci.yml
.github/yara/: pacemaker.yar
docs/: ACKNOWLEDGEMENTS.md  BUILD_NOTES.md  TECHNIQUES.md  attack-scenarios.json  config-example.json
helpers/pacemaker/: Cargo.toml  build.sh  default.nix
helpers/pacemaker/src/: main.rs
src/: chain.rs  cli.rs  config.rs  easter_egg.rs  lib.rs  logger.rs  main.rs  nedry.rs  runner.rs  safety.rs  suites.rs  utils.rs
src/techniques/: bpfdoor.rs  collection.rs  command_and_control.rs  command_interpreter.rs  container_escape.rs  credential_access.rs  defense_evasion.rs  defense_evasion_obfuscation.rs  discovery.rs  dns_recon.rs  dnscat_c2.rs  execution.rs  gtfobins.rs  impact.rs  kernel_exploits.rs  lateral_movement.rs  mod.rs  network.rs  persistence.rs  persistence_system_process.rs  privilege_escalation.rs  process_injection.rs  protocol_lateral_movement.rs  sharepoint_exfil.rs  software.rs
src/voltron/: client.rs  encrypted_channel.rs  handshake.rs  mod.rs  protocol.rs  psk.rs  scenario.rs  server.rs  state.rs  watchdog.rs
