[package]
name = "signalbench"
version = "1.4.3"
edition = "2021"
authors = ["Simon Sigre <info@gocortex.io>"]
description = "Endpoint telemetry generator for security analytics, research, and training using MITRE ATT&CK techniques"
homepage = "https://gocortex.io"
repository = "https://github.com/gocortex/signalbench"
license = "MIT"
keywords = ["security", "telemetry", "mitre", "analytics", "research", "training"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.46", features = ["full"] }
colored = "2.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tempfile = "3.20"
rand = "0.8"
uuid = { version = "1.17", features = ["v4"] }
whoami = "1.6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
libc = "0.2"
hostname = "0.4"
async-trait = "0.1"



