[package]
name = "signalbench"
version = "1.7.0"
edition = "2021"
authors = ["Simon Sigre <info@gocortex.io>"]
description = "Endpoint telemetry generator for security analytics, research, and training using MITRE ATT&CK techniques"
homepage = "https://gocortex.io"
repository = "https://github.com/gocortexio/signalbench"
license = "AGPL-3.0-or-later"
keywords = ["security", "telemetry", "mitre", "analytics", "research"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tempfile = "3"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
whoami = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
libc = "0.2"
hostname = "0.4"
async-trait = "0.1"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
thiserror = "2"
num_cpus = "1"
serde_yaml = "0.9"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
des = "0.8"
